[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "agno>=1.6.3",
    "dotenv>=0.9.9",
    "duckduckgo-search>=8.0.4",
    "fastapi[standard]>=0.115.13",
    "google-genai>=1.21.1",
    "sqlalchemy>=2.0.41",
    "yfinance>=0.2.63",
]
